# python-project-49

./: Makefile  README.md  brain_gcd.cast  pyproject.toml
brain_games/: cli.py  engine.py  greeting.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_calc_entry.py  brain_even.py  brain_even_entry.py  brain_games.py  brain_gcd.py  brain_gcd_entry.py  brain_prime.py  brain_prime_entry.py  brain_progression.py  brain_progression_entry.py  engine.py  greeting.py  logic.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
