[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even_entry:main"
brain-calc = "brain_games.scripts.brain_calc_entry:main"
brain-gcd = "brain_games.scripts.brain_gcd_entry:main"
brain-progression = "brain_games.scripts.brain_progression_entry:main"
brain-prime = "brain_games.scripts.brain_prime_entry:main"